Update: index.html

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 						<div class="col-lg-6">
 							<div class="banner_content">
 								<h5>This is me</h5>
-								<h2>Travor James</h2>
+								<h2>Jeon GaHyun</h2>
 								<p>You will begin to realise why this exercise is called the Dickens Pattern (with reference to the ghost showing Scrooge some different futures)</p>
 								<a class="banner_btn" href="#">Discover Now</a>
 							</div>
@@ -94,7 +94,14 @@
         			<div class="col-lg-6">
         				<div class="welcome_text">
         					<h4>About Myself</h4>
-        					<p>inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct standards especially in the workplace. That’s why it’s crucial that, as women, our behavior on the job is beyond reproach. inappropriate behavior is often laughed.</p>
+        					<p>
+								안녕하세요. 데이터 사이언티스트 전가현입니다. 
+								통계학을 전공하고, 데이터 분석가로서 더 깊은 교통 도메인 지식을 쌓기 위해 도시과학대학원에서 교통을 전공했습니다.
+								대학원에서 다양한 데이터를 다루며 학위 논문으로 이미지 데이터를 활용한 고속도로 이벤트 예측 딥러닝 모델을 개발했습니다. 
+								한 가지 주제를 위해 대용량 데이터를 수집, 전처리부터 모델 개발, 평가까지 오랜 시간 연구한 경험은 데이터 분석가로서 자부심을 갖게 된 계기가 되었습니다.
+								다양한 정형/비정형 데이터 전처리와 분석 경험과 ML/DL 알고리즘을 활용한 예측 모델을 실제 서비스에 배포하며 쌓은 역량을 타 도메인에 적용하여 완성도 높은 결과를 이끌어낼 수 있습니다. 
+								또한 적극적인 소통으로 협업하여 팀의 정해진 목표를 달성하기 위해 높은 시너지를 낼 수 있도록 기여하겠습니다.
+							</p>
         					<div class="row">
         						<div class="col-md-4">
         							<div class="wel_item">
@@ -166,8 +173,9 @@
         <section class="feature_area p_120">
         	<div class="container">
         		<div class="main_title">
-        			<h2>offerings to my clients</h2>
-        			<p>If you are looking at blank cassettes on the web, you may be very confused at the difference in price. You may see some for as low as $.17 each.</p>
+        			<h2>프로젝트 성과</h2>
+        			<!-- <p>(주)와이비에스: 2020.5 ~ 2025.2</p>
+					<p>코스맥스: 2025.2 ~ 현재</p> -->
         		</div>
         		<div class="feature_inner row">
         			<div class="col-lg-4 col-md-6">
@@ -221,7 +229,7 @@
         <section class="projects_area p_120">
         	<div class="container">
         		<div class="main_title">
-					<h2>Our Recent Completed Projects</h2>
+					<h2>개인 프로젝트</h2>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor</p>
 				</div>
         		<div class="projects_fillter">
