Update: index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="icon" href="img/favicon.png" type="image/png">
-        <title>Ronin Multi</title>
+        <title>Jeon GaHyun's Portfolio</title>
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="css/bootstrap.css">
         <link rel="stylesheet" href="vendors/linericon/style.css">
@@ -173,7 +173,7 @@
         <section class="feature_area p_120">
         	<div class="container">
         		<div class="main_title">
-        			<h2>프로젝트 성과</h2>
+        			<h2>프로젝트 참여 이력</h2>
         			<!-- <p>(주)와이비에스: 2020.5 ~ 2025.2</p>
 					<p>코스맥스: 2025.2 ~ 현재</p> -->
         		</div>
@@ -181,42 +181,42 @@
         			<div class="col-lg-4 col-md-6">
         				<div class="feature_item">
         					<i class="flaticon-city"></i>
-        					<h4>Architecture</h4>
+        					<h4>교통예보시스템 기능 개선</h4>
         					<p>If you are looking at blank cassettes on the web, you may be very confused at the difference in price. You may see some for as low as $17 each.</p>
         				</div>
         			</div>
         			<div class="col-lg-4 col-md-6">
         				<div class="feature_item">
         					<i class="flaticon-skyline"></i>
-        					<h4>Interior Design</h4>
+        					<h4>GTX 통행 패턴 분석</h4>
         					<p>If you are looking at blank cassettes on the web, you may be very confused at the difference in price. You may see some for as low as $17 each.</p>
         				</div>
         			</div>
         			<div class="col-lg-4 col-md-6">
         				<div class="feature_item">
         					<i class="flaticon-sketch"></i>
-        					<h4>Concept Design</h4>
+        					<h4>교통예보시스템 고정밀화</h4>
         					<p>If you are looking at blank cassettes on the web, you may be very confused at the difference in price. You may see some for as low as $17 each.</p>
         				</div>
         			</div>
         			<div class="col-lg-4 col-md-6">
         				<div class="feature_item">
         					<i class="flaticon-city"></i>
-        					<h4>Architecture</h4>
+        					<h4>RAG 구축</h4>
         					<p>If you are looking at blank cassettes on the web, you may be very confused at the difference in price. You may see some for as low as $17 each.</p>
         				</div>
         			</div>
         			<div class="col-lg-4 col-md-6">
         				<div class="feature_item">
         					<i class="flaticon-skyline"></i>
-        					<h4>Interior Design</h4>
+        					<h4>데이터 분석 리포트 발행</h4>
         					<p>If you are looking at blank cassettes on the web, you may be very confused at the difference in price. You may see some for as low as $17 each.</p>
         				</div>
         			</div>
         			<div class="col-lg-4 col-md-6">
         				<div class="feature_item">
         					<i class="flaticon-sketch"></i>
-        					<h4>Concept Design</h4>
+        					<h4>미생물 데이터 분석</h4>
         					<p>If you are looking at blank cassettes on the web, you may be very confused at the difference in price. You may see some for as low as $17 each.</p>
         				</div>
         			</div>
@@ -245,7 +245,7 @@
 						<div class="projects_item">
 							<img class="img-fluid" src="img/projects/projects-1.jpg" alt="">
 							<div class="projects_text">
-								<a href="portfolio-details.html"><h4>3D Helmet Design</h4></a>
+								<a href="portfolio-details.html"><h4>After Show</h4></a>
 								<p>Client Project</p>
 							</div>
 						</div>
@@ -254,7 +254,7 @@
 						<div class="projects_item">
 							<img class="img-fluid" src="img/projects/projects-2.jpg" alt="">
 							<div class="projects_text">
-								<a href="portfolio-details.html"><h4>3D Helmet Design</h4></a>
+								<a href="portfolio-details.html"><h4>Bookworm Club</h4></a>
 								<p>Client Project</p>
 							</div>
 						</div>
@@ -263,7 +263,7 @@
 						<div class="projects_item">
 							<img class="img-fluid" src="img/projects/projects-3.jpg" alt="">
 							<div class="projects_text">
-								<a href="portfolio-details.html"><h4>3D Helmet Design</h4></a>
+								<a href="portfolio-details.html"><h4>Network Visualization</h4></a>
 								<p>Client Project</p>
 							</div>
 						</div>
@@ -272,7 +272,7 @@
 						<div class="projects_item">
 							<img class="img-fluid" src="img/projects/projects-4.jpg" alt="">
 							<div class="projects_text">
-								<a href="portfolio-details.html"><h4>3D Helmet Design</h4></a>
+								<a href="portfolio-details.html"><h4>Airport Park finder</h4></a>
 								<p>Client Project</p>
 							</div>
 						</div>
@@ -281,7 +281,7 @@
 						<div class="projects_item">
 							<img class="img-fluid" src="img/projects/projects-5.jpg" alt="">
 							<div class="projects_text">
-								<a href="portfolio-details.html"><h4>3D Helmet Design</h4></a>
+								<a href="portfolio-details.html"><h4>Cosmetic Trend Watcher</h4></a>
 								<p>Client Project</p>
 							</div>
 						</div>
