--- a/index.html
+++ b/index.html
@@ -129,36 +129,36 @@
         			</div>
         			<div class="col-lg-6">
         				<div class="tools_expert">
-        					<h3>Tools Expertness</h3>
+        					<h3>SKILLS</h3>
         					<div class="skill_main">
 								<div class="skill_item">
-									<h4>After Effects <span class="counter">85</span>%</h4>
-									<div class="progress">
-										<div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
-									</div>
-								</div>
-								<div class="skill_item">
-									<h4>Photoshop <span class="counter">90</span>%</h4>
-									<div class="progress">
-										<div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-									</div>
-								</div>
-								<div class="skill_item">
-									<h4>Illustrator <span class="counter">70</span>%</h4>
-									<div class="progress">
-										<div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
-									</div>
-								</div>
-								<div class="skill_item">
-									<h4>Sublime <span class="counter">95</span>%</h4>
+									<h4>Programming Tools | Python, SQL</h4>
 									<div class="progress">
 										<div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
 									</div>
 								</div>
 								<div class="skill_item">
-									<h4>Sketch <span class="counter">75</span>%</h4>
+									<h4>Modeling | ML, DL, NLP(RAG) </h4>
 									<div class="progress">
-										<div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+										<div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+									</div>
+								</div>
+								<div class="skill_item">
+									<h4>Statistics </h4>
+									<div class="progress">
+										<div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+									</div>
+								</div>
+								<div class="skill_item">
+									<h4>Analytics & BI </h4>
+									<div class="progress">
+										<div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+									</div>
+								</div>
+								<div class="skill_item">
+									<h4>Data Engineering </h4>
+									<div class="progress">
+										<div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
 									</div>
 								</div>
 							</div>
@@ -179,46 +179,117 @@
         		</div>
         		<div class="feature_inner row">
         			<div class="col-lg-4 col-md-6">
-        				<div class="feature_item">
-        					<i class="flaticon-city"></i>
-        					<h4>교통예보시스템 기능 개선</h4>
-        					<p>If you are looking at blank cassettes on the web, you may be very confused at the difference in price. You may see some for as low as $17 each.</p>
-        				</div>
+						<!-- feature item: 교통예보시스템 기능 개선 (refactored for readability) -->
+						<div class="feature_item" style="padding: 24px 20px;">
+							<i class="flaticon-city" aria-hidden="true" style="font-size:36px; color:#9ca3af;"></i>
+
+							<h4 style="font-weight:700; margin-top:16px; margin-bottom:12px;">교통예보시스템 기능 개선</h4>
+
+							<div class="feature-tags" style="margin-bottom:14px;">
+								<span class="tag tag-pm" style="background:#eef2ff; color:#4338ca; padding:4px 10px; border-radius:12px; font-size:12px; margin-right:6px;">PM</span>
+								<span class="tag tag-ml" style="background:#f0fdf4; color:#166534; padding:4px 10px; border-radius:12px; font-size:12px;">ML</span>
+							</div>
+
+							<ul class="feature-list" style="padding-left:18px; line-height:1.6; margin-bottom:14px;">
+								<li>요구사항 분석 및 전체 일정·운영 총괄</li>
+								<li>교통안전 예측 알고리즘(DT) 개발</li>
+								<li>월간예보 예측 알고리즘(XGBoost) 개발</li>
+							</ul>
+						</div>
         			</div>
         			<div class="col-lg-4 col-md-6">
-        				<div class="feature_item">
-        					<i class="flaticon-skyline"></i>
-        					<h4>GTX 통행 패턴 분석</h4>
-        					<p>If you are looking at blank cassettes on the web, you may be very confused at the difference in price. You may see some for as low as $17 each.</p>
-        				</div>
+						<!-- feature item: GTX 통행 패턴 분석 (refactored for readability) -->
+						<div class="feature_item" style="padding: 24px 20px;">
+							<i class="flaticon-skyline" aria-hidden="true" style="font-size:36px; color:#9ca3af;"></i>
+
+							<h4 style="font-weight:700; margin-top:16px; margin-bottom:12px;">GTX 통행 패턴 분석</h4>
+
+							<div class="feature-tags" style="margin-bottom:14px;">
+								<span class="tag tag-da" style="background:#fff7ed; color:#c2410c; padding:4px 10px; border-radius:12px; font-size:12px;">DA</span>
+							</div>
+
+							<ul class="feature-list" style="padding-left:18px; line-height:1.6; margin-bottom:14px;">
+								<li>GTX 노선 영향권 교통카드 데이터 분석</li>
+								<li>GTX 영향권 통행 패턴 분석(RNN)</li>
+								<li>교통카드, 내비게이션 융합 분석</li>
+							</ul>
+						</div>
         			</div>
         			<div class="col-lg-4 col-md-6">
-        				<div class="feature_item">
-        					<i class="flaticon-sketch"></i>
-        					<h4>교통예보시스템 고정밀화</h4>
-        					<p>If you are looking at blank cassettes on the web, you may be very confused at the difference in price. You may see some for as low as $17 each.</p>
-        				</div>
+						<!-- feature item: 교통예보시스템 고정밀화 (refactored for readability) -->
+						<div class="feature_item" style="padding: 24px 20px;">
+							<i class="flaticon-skyline" aria-hidden="true" style="font-size:36px; color:#9ca3af;"></i>
+
+							<h4 style="font-weight:700; margin-top:16px; margin-bottom:12px;">교통예보시스템 고정밀화</h4>
+
+							<div class="feature-tags" style="margin-bottom:14px;">
+								<span class="tag tag-ml" style="background:#f0fdf4; color:#166534; padding:4px 10px; border-radius:12px; font-size:12px;">ML</span>
+							</div>
+
+							<ul class="feature-list" style="padding-left:18px; line-height:1.6; margin-bottom:14px;">
+								<li>데이터 품질 분석</li>
+								<li>도시간 소요시간 예측 알고리즘(CNN) 개발</li>
+								<li></li>
+							</ul>
+						</div>
         			</div>
         			<div class="col-lg-4 col-md-6">
-        				<div class="feature_item">
-        					<i class="flaticon-city"></i>
-        					<h4>RAG 구축</h4>
-        					<p>If you are looking at blank cassettes on the web, you may be very confused at the difference in price. You may see some for as low as $17 each.</p>
-        				</div>
+						<!-- feature item: RAG 구축 (refactored for readability) -->
+						<div class="feature_item" style="padding: 24px 20px;">
+							<i class="flaticon-city" aria-hidden="true" style="font-size:36px; color:#9ca3af;"></i>
+
+							<h4 style="font-weight:700; margin-top:16px; margin-bottom:12px;">RAG 구축</h4>
+
+							<div class="feature-tags" style="margin-bottom:14px;">
+								<span class="tag tag-nlp" style="background:#f5f3ff; color:#6d28d9; padding:4px 10px; border-radius:12px; font-size:12px;">NLP</span>
+
+							</div>
+
+							<ul class="feature-list" style="padding-left:18px; line-height:1.6; margin-bottom:14px;">
+								<li>자사 원료 문서 검색 기능 구현</li>
+								<li>시맨틱 서치</li>
+								<li>PDF 텍스트 추출</li>
+							</ul>
+						</div>
         			</div>
         			<div class="col-lg-4 col-md-6">
-        				<div class="feature_item">
-        					<i class="flaticon-skyline"></i>
-        					<h4>데이터 분석 리포트 발행</h4>
-        					<p>If you are looking at blank cassettes on the web, you may be very confused at the difference in price. You may see some for as low as $17 each.</p>
-        				</div>
-        			</div>
-        			<div class="col-lg-4 col-md-6">
-        				<div class="feature_item">
-        					<i class="flaticon-sketch"></i>
-        					<h4>미생물 데이터 분석</h4>
-        					<p>If you are looking at blank cassettes on the web, you may be very confused at the difference in price. You may see some for as low as $17 each.</p>
-        				</div>
+						<!-- feature item: 데이터 분석 리포트 (refactored for readability) -->
+						<div class="feature_item" style="padding: 24px 20px;">
+							<i class="flaticon-city" aria-hidden="true" style="font-size:36px; color:#9ca3af;"></i>
+
+							<h4 style="font-weight:700; margin-top:16px; margin-bottom:12px;">데이터 분석 리포트</h4>
+
+							<div class="feature-tags" style="margin-bottom:14px;">
+								<span class="tag tag-da" style="background:#fff7ed; color:#c2410c; padding:4px 10px; border-radius:12px; font-size:12px;">DA</span>
+
+							</div>
+
+							<ul class="feature-list" style="padding-left:18px; line-height:1.6; margin-bottom:14px;">
+								<li>올리브영, 네이버쇼핑 이커머스 데이터 분석</li>
+								<li>화장품 트렌드 리포트 배포</li>
+								<li>데이터 시각화</li>
+							</ul>
+						</div>
+        			</div>			
+					        			<div class="col-lg-4 col-md-6">
+						<!-- feature item: 미생물 데이터 분석 (refactored for readability) -->
+						<div class="feature_item" style="padding: 24px 20px;">
+							<i class="flaticon-sketch" aria-hidden="true" style="font-size:36px; color:#9ca3af;"></i>
+
+							<h4 style="font-weight:700; margin-top:16px; margin-bottom:12px;">미생물 데이터 분석</h4>
+
+							<div class="feature-tags" style="margin-bottom:14px;">
+								<span class="tag tag-da" style="background:#fff7ed; color:#c2410c; padding:4px 10px; border-radius:12px; font-size:12px;">DA</span>
+								<span class="tag tag-ml" style="background:#f0fdf4; color:#166534; padding:4px 10px; border-radius:12px; font-size:12px;">ML</span>
+
+							</div>
+
+							<ul class="feature-list" style="padding-left:18px; line-height:1.6; margin-bottom:14px;">
+								<li>방부력 실험 데이터 분석</li>
+								<li>차원 축소 분석</li>
+								<li>데이터 시각화</li>
+							</ul>
+						</div>
         			</div>
         		</div>
         	</div>
