Feat: index.html
- 박스 클릭 시, 링크 이동

--- a/index.html
+++ b/index.html
@@ -142,22 +142,24 @@
         		<div class="feature_inner row">
         			<div class="col-lg-4 col-md-6">
 						<!-- feature item: 교통예보시스템 기능 개선 (refactored for readability) -->
-						<div class="feature_item" style="padding: 24px 20px;">
-							<i class="flaticon-city" aria-hidden="true" style="font-size:36px; color:#9ca3af;"></i>
+						<a href="portfolio-details.html" style="display:block; color:inherit;">
+							<div class="feature_item" style="padding: 24px 20px;">
+								<i class="flaticon-city" aria-hidden="true" style="font-size:36px; color:#9ca3af;"></i>
 
-							<h4 style="font-weight:700; margin-top:16px; margin-bottom:12px;">교통예보시스템 기능 개선</h4>
+								<h4 style="font-weight:700; margin-top:16px; margin-bottom:12px;">교통예보시스템 기능 개선</h4>
 
-							<div class="feature-tags" style="margin-bottom:14px;">
-								<span class="tag tag-pm" style="background:#eef2ff; color:#4338ca; padding:4px 10px; border-radius:12px; font-size:12px; margin-right:6px;">PM</span>
-								<span class="tag tag-ml" style="background:#f0fdf4; color:#166534; padding:4px 10px; border-radius:12px; font-size:12px;">ML</span>
+								<div class="feature-tags" style="margin-bottom:14px;">
+									<span class="tag tag-pm" style="background:#eef2ff; color:#4338ca; padding:4px 10px; border-radius:12px; font-size:12px; margin-right:6px;">PM</span>
+									<span class="tag tag-ml" style="background:#f0fdf4; color:#166534; padding:4px 10px; border-radius:12px; font-size:12px;">ML</span>
+								</div>
+
+								<ul class="feature-list" style="padding-left:18px; line-height:1.6; margin-bottom:14px;">
+									<li>요구사항 분석 및 전체 일정·운영 총괄</li>
+									<li>교통안전 예측 알고리즘(DT) 개발</li>
+									<li>월간예보 예측 알고리즘(XGBoost) 개발</li>
+								</ul>
 							</div>
-
-							<ul class="feature-list" style="padding-left:18px; line-height:1.6; margin-bottom:14px;">
-								<li>요구사항 분석 및 전체 일정·운영 총괄</li>
-								<li>교통안전 예측 알고리즘(DT) 개발</li>
-								<li>월간예보 예측 알고리즘(XGBoost) 개발</li>
-							</ul>
-						</div>
+						</a>
         			</div>
         			<div class="col-lg-4 col-md-6">
 						<!-- feature item: GTX 통행 패턴 분석 (refactored for readability) -->
@@ -276,7 +278,7 @@
 				<div class="projects_inner row">
 					<div class="col-lg-4 col-sm-6 brand web">
 						<div class="projects_item">
-							<img class="img-fluid" src="img/projects/projects-1.jpg" alt="">
+							<a href="portfolio-details.html"><img class="img-fluid" src="img/projects/projects-1.jpg" alt=""></a>
 							<div class="projects_text">
 								<a href="portfolio-details.html"><h4>After Show</h4></a>
 								<p>Client Project</p>
@@ -285,7 +287,7 @@
 					</div>
 					<div class="col-lg-4 col-sm-6 brand work">
 						<div class="projects_item">
-							<img class="img-fluid" src="img/projects/projects-2.jpg" alt="">
+							<a href="portfolio-details.html"><img class="img-fluid" src="img/projects/projects-2.jpg" alt=""></a>
 							<div class="projects_text">
 								<a href="portfolio-details.html"><h4>Bookworm Club</h4></a>
 								<p>Client Project</p>
@@ -294,7 +296,7 @@
 					</div>
 					<div class="col-lg-4 col-sm-6 work">
 						<div class="projects_item">
-							<img class="img-fluid" src="img/projects/projects-3.jpg" alt="">
+							<a href="portfolio-details.html"><img class="img-fluid" src="img/projects/projects-3.jpg" alt=""></a>
 							<div class="projects_text">
 								<a href="portfolio-details.html"><h4>Network Visualization</h4></a>
 								<p>Client Project</p>
@@ -303,7 +305,7 @@
 					</div>
 					<div class="col-lg-4 col-sm-6 brand web">
 						<div class="projects_item">
-							<img class="img-fluid" src="img/projects/projects-4.jpg" alt="">
+							<a href="portfolio-details.html"><img class="img-fluid" src="img/projects/projects-4.jpg" alt=""></a>
 							<div class="projects_text">
 								<a href="portfolio-details.html"><h4>Airport Park finder</h4></a>
 								<p>Client Project</p>
@@ -312,7 +314,7 @@
 					</div>
 					<div class="col-lg-4 col-sm-6 brand work">
 						<div class="projects_item">
-							<img class="img-fluid" src="img/projects/projects-5.jpg" alt="">
+							<a href="portfolio-details.html"><img class="img-fluid" src="img/projects/projects-5.jpg" alt=""></a>
 							<div class="projects_text">
 								<a href="portfolio-details.html"><h4>Cosmetic Trend Watcher</h4></a>
 								<p>Client Project</p>
@@ -321,7 +323,7 @@
 					</div>
 					<div class="col-lg-4 col-sm-6 brand work web">
 						<div class="projects_item">
-							<img class="img-fluid" src="img/projects/projects-6.jpg" alt="">
+							<a href="portfolio-details.html"><img class="img-fluid" src="img/projects/projects-6.jpg" alt=""></a>
 							<div class="projects_text">
 								<a href="portfolio-details.html"><h4>3D Helmet Design</h4></a>
 								<p>Client Project</p>
