Feat: index.html
- 박스 클릭 시, 링크 이동

--- a/index.html
+++ b/index.html
@@ -163,97 +163,107 @@
         			</div>
         			<div class="col-lg-4 col-md-6">
 						<!-- feature item: GTX 통행 패턴 분석 (refactored for readability) -->
-						<div class="feature_item" style="padding: 24px 20px;">
-							<i class="flaticon-skyline" aria-hidden="true" style="font-size:36px; color:#9ca3af;"></i>
+						<a href="portfolio-details.html" style="display:block; color:inherit;">
+							<div class="feature_item" style="padding: 24px 20px;">
+								<i class="flaticon-skyline" aria-hidden="true" style="font-size:36px; color:#9ca3af;"></i>
 
-							<h4 style="font-weight:700; margin-top:16px; margin-bottom:12px;">GTX 통행 패턴 분석</h4>
+								<h4 style="font-weight:700; margin-top:16px; margin-bottom:12px;">GTX 통행 패턴 분석</h4>
 
-							<div class="feature-tags" style="margin-bottom:14px;">
-								<span class="tag tag-da" style="background:#fff7ed; color:#c2410c; padding:4px 10px; border-radius:12px; font-size:12px;">DA</span>
+								<div class="feature-tags" style="margin-bottom:14px;">
+									<span class="tag tag-da" style="background:#fff7ed; color:#c2410c; padding:4px 10px; border-radius:12px; font-size:12px;">DA</span>
+								</div>
+
+								<ul class="feature-list" style="padding-left:18px; line-height:1.6; margin-bottom:14px;">
+									<li>GTX 노선 영향권 교통카드 데이터 분석</li>
+									<li>GTX 영향권 통행 패턴 분석(RNN)</li>
+									<li>교통카드, 내비게이션 융합 분석</li>
+								</ul>
 							</div>
-
-							<ul class="feature-list" style="padding-left:18px; line-height:1.6; margin-bottom:14px;">
-								<li>GTX 노선 영향권 교통카드 데이터 분석</li>
-								<li>GTX 영향권 통행 패턴 분석(RNN)</li>
-								<li>교통카드, 내비게이션 융합 분석</li>
-							</ul>
-						</div>
+						</a>
         			</div>
         			<div class="col-lg-4 col-md-6">
 						<!-- feature item: 교통예보시스템 고정밀화 (refactored for readability) -->
-						<div class="feature_item" style="padding: 24px 20px;">
-							<i class="flaticon-skyline" aria-hidden="true" style="font-size:36px; color:#9ca3af;"></i>
+						<a href="portfolio-details.html" style="display:block; color:inherit;">
+							<div class="feature_item" style="padding: 24px 20px;">
+								<i class="flaticon-skyline" aria-hidden="true" style="font-size:36px; color:#9ca3af;"></i>
 
-							<h4 style="font-weight:700; margin-top:16px; margin-bottom:12px;">교통예보시스템 고정밀화</h4>
+								<h4 style="font-weight:700; margin-top:16px; margin-bottom:12px;">교통예보시스템 고정밀화</h4>
 
-							<div class="feature-tags" style="margin-bottom:14px;">
-								<span class="tag tag-ml" style="background:#f0fdf4; color:#166534; padding:4px 10px; border-radius:12px; font-size:12px;">ML</span>
+								<div class="feature-tags" style="margin-bottom:14px;">
+									<span class="tag tag-ml" style="background:#f0fdf4; color:#166534; padding:4px 10px; border-radius:12px; font-size:12px;">ML</span>
+								</div>
+
+								<ul class="feature-list" style="padding-left:18px; line-height:1.6; margin-bottom:14px;">
+									<li>데이터 품질 분석</li>
+									<li>도시간 소요시간 예측 알고리즘(CNN) 개발</li>
+									<li></li>
+								</ul>
 							</div>
-
-							<ul class="feature-list" style="padding-left:18px; line-height:1.6; margin-bottom:14px;">
-								<li>데이터 품질 분석</li>
-								<li>도시간 소요시간 예측 알고리즘(CNN) 개발</li>
-								<li></li>
-							</ul>
-						</div>
+						</a>
         			</div>
         			<div class="col-lg-4 col-md-6">
 						<!-- feature item: RAG 구축 (refactored for readability) -->
-						<div class="feature_item" style="padding: 24px 20px;">
-							<i class="flaticon-city" aria-hidden="true" style="font-size:36px; color:#9ca3af;"></i>
+						<a href="portfolio-details.html" style="display:block; color:inherit;">
+							<div class="feature_item" style="padding: 24px 20px;">
+								<i class="flaticon-city" aria-hidden="true" style="font-size:36px; color:#9ca3af;"></i>
 
-							<h4 style="font-weight:700; margin-top:16px; margin-bottom:12px;">RAG 구축</h4>
+								<h4 style="font-weight:700; margin-top:16px; margin-bottom:12px;">RAG 구축</h4>
 
-							<div class="feature-tags" style="margin-bottom:14px;">
-								<span class="tag tag-nlp" style="background:#f5f3ff; color:#6d28d9; padding:4px 10px; border-radius:12px; font-size:12px;">NLP</span>
+								<div class="feature-tags" style="margin-bottom:14px;">
+									<span class="tag tag-nlp" style="background:#f5f3ff; color:#6d28d9; padding:4px 10px; border-radius:12px; font-size:12px;">NLP</span>
 
+								</div>
+
+								<ul class="feature-list" style="padding-left:18px; line-height:1.6; margin-bottom:14px;">
+									<li>자사 원료 문서 검색 기능 구현</li>
+									<li>시맨틱 서치</li>
+									<li>PDF 텍스트 추출</li>
+								</ul>
 							</div>
-
-							<ul class="feature-list" style="padding-left:18px; line-height:1.6; margin-bottom:14px;">
-								<li>자사 원료 문서 검색 기능 구현</li>
-								<li>시맨틱 서치</li>
-								<li>PDF 텍스트 추출</li>
-							</ul>
-						</div>
+						</a>
         			</div>
         			<div class="col-lg-4 col-md-6">
 						<!-- feature item: 데이터 분석 리포트 (refactored for readability) -->
-						<div class="feature_item" style="padding: 24px 20px;">
-							<i class="flaticon-city" aria-hidden="true" style="font-size:36px; color:#9ca3af;"></i>
+						<a href="portfolio-details.html" style="display:block; color:inherit;">
+							<div class="feature_item" style="padding: 24px 20px;">
+								<i class="flaticon-city" aria-hidden="true" style="font-size:36px; color:#9ca3af;"></i>
 
-							<h4 style="font-weight:700; margin-top:16px; margin-bottom:12px;">데이터 분석 리포트</h4>
+								<h4 style="font-weight:700; margin-top:16px; margin-bottom:12px;">데이터 분석 리포트</h4>
 
-							<div class="feature-tags" style="margin-bottom:14px;">
-								<span class="tag tag-da" style="background:#fff7ed; color:#c2410c; padding:4px 10px; border-radius:12px; font-size:12px;">DA</span>
+								<div class="feature-tags" style="margin-bottom:14px;">
+									<span class="tag tag-da" style="background:#fff7ed; color:#c2410c; padding:4px 10px; border-radius:12px; font-size:12px;">DA</span>
 
+								</div>
+
+								<ul class="feature-list" style="padding-left:18px; line-height:1.6; margin-bottom:14px;">
+									<li>올리브영, 네이버쇼핑 이커머스 데이터 분석</li>
+									<li>화장품 트렌드 리포트 배포</li>
+									<li>데이터 시각화</li>
+								</ul>
 							</div>
-
-							<ul class="feature-list" style="padding-left:18px; line-height:1.6; margin-bottom:14px;">
-								<li>올리브영, 네이버쇼핑 이커머스 데이터 분석</li>
-								<li>화장품 트렌드 리포트 배포</li>
-								<li>데이터 시각화</li>
-							</ul>
-						</div>
+						</a>
         			</div>			
-					        			<div class="col-lg-4 col-md-6">
+					<div class="col-lg-4 col-md-6">
+						<a href="portfolio-details.html" style="display:block; color:inherit;">
 						<!-- feature item: 미생물 데이터 분석 (refactored for readability) -->
-						<div class="feature_item" style="padding: 24px 20px;">
-							<i class="flaticon-sketch" aria-hidden="true" style="font-size:36px; color:#9ca3af;"></i>
+							<div class="feature_item" style="padding: 24px 20px;">
+								<i class="flaticon-sketch" aria-hidden="true" style="font-size:36px; color:#9ca3af;"></i>
 
-							<h4 style="font-weight:700; margin-top:16px; margin-bottom:12px;">미생물 데이터 분석</h4>
+								<h4 style="font-weight:700; margin-top:16px; margin-bottom:12px;">미생물 데이터 분석</h4>
 
-							<div class="feature-tags" style="margin-bottom:14px;">
-								<span class="tag tag-da" style="background:#fff7ed; color:#c2410c; padding:4px 10px; border-radius:12px; font-size:12px;">DA</span>
-								<span class="tag tag-ml" style="background:#f0fdf4; color:#166534; padding:4px 10px; border-radius:12px; font-size:12px;">ML</span>
+								<div class="feature-tags" style="margin-bottom:14px;">
+									<span class="tag tag-da" style="background:#fff7ed; color:#c2410c; padding:4px 10px; border-radius:12px; font-size:12px;">DA</span>
+									<span class="tag tag-ml" style="background:#f0fdf4; color:#166534; padding:4px 10px; border-radius:12px; font-size:12px;">ML</span>
 
+								</div>
+
+								<ul class="feature-list" style="padding-left:18px; line-height:1.6; margin-bottom:14px;">
+									<li>방부력 실험 데이터 분석</li>
+									<li>차원 축소 분석</li>
+									<li>데이터 시각화</li>
+								</ul>
 							</div>
-
-							<ul class="feature-list" style="padding-left:18px; line-height:1.6; margin-bottom:14px;">
-								<li>방부력 실험 데이터 분석</li>
-								<li>차원 축소 분석</li>
-								<li>데이터 시각화</li>
-							</ul>
-						</div>
+						</a>
         			</div>
         		</div>
         	</div>
@@ -277,58 +287,70 @@
 				</div>
 				<div class="projects_inner row">
 					<div class="col-lg-4 col-sm-6 brand web">
-						<div class="projects_item">
-							<a href="portfolio-details.html"><img class="img-fluid" src="img/projects/projects-1.jpg" alt=""></a>
-							<div class="projects_text">
-								<a href="portfolio-details.html"><h4>After Show</h4></a>
-								<p>Client Project</p>
+						<a href="portfolio-details.html" style="display:block; color:inherit;">
+							<div class="projects_item">
+								<a href="portfolio-details.html"><img class="img-fluid" src="img/projects/projects-1.jpg" alt=""></a>
+								<div class="projects_text">
+									<h4>After Show</h4>
+									<p>Client Project</p>
+								</div>
 							</div>
-						</div>
+						</a>
 					</div>
 					<div class="col-lg-4 col-sm-6 brand work">
-						<div class="projects_item">
-							<a href="portfolio-details.html"><img class="img-fluid" src="img/projects/projects-2.jpg" alt=""></a>
-							<div class="projects_text">
-								<a href="portfolio-details.html"><h4>Bookworm Club</h4></a>
-								<p>Client Project</p>
+						<a href="portfolio-details.html" style="display:block; color:inherit;">
+							<div class="projects_item">
+								<a href="portfolio-details.html"><img class="img-fluid" src="img/projects/projects-2.jpg" alt=""></a>
+								<div class="projects_text">
+									<h4>Bookworm Club</h4>
+									<p>Client Project</p>
+								</div>
 							</div>
-						</div>
+						</a>
 					</div>
 					<div class="col-lg-4 col-sm-6 work">
-						<div class="projects_item">
-							<a href="portfolio-details.html"><img class="img-fluid" src="img/projects/projects-3.jpg" alt=""></a>
-							<div class="projects_text">
-								<a href="portfolio-details.html"><h4>Network Visualization</h4></a>
-								<p>Client Project</p>
+						<a href="portfolio-details.html" style="display:block; color:inherit;">
+							<div class="projects_item">
+								<a href="portfolio-details.html"><img class="img-fluid" src="img/projects/projects-3.jpg" alt=""></a>
+								<div class="projects_text">
+									<h4>Network Visualization</h4>
+									<p>Client Project</p>
+								</div>
 							</div>
-						</div>
+						</a>
 					</div>
 					<div class="col-lg-4 col-sm-6 brand web">
-						<div class="projects_item">
-							<a href="portfolio-details.html"><img class="img-fluid" src="img/projects/projects-4.jpg" alt=""></a>
-							<div class="projects_text">
-								<a href="portfolio-details.html"><h4>Airport Park finder</h4></a>
-								<p>Client Project</p>
+						<a href="portfolio-details.html" style="display:block; color:inherit;">
+							<div class="projects_item">
+								<a href="portfolio-details.html"><img class="img-fluid" src="img/projects/projects-4.jpg" alt=""></a>
+								<div class="projects_text">
+									<h4>Airport Park finder</h4>
+									<p>Client Project</p>
+								</div>
 							</div>
-						</div>
+						</a>
 					</div>
 					<div class="col-lg-4 col-sm-6 brand work">
-						<div class="projects_item">
-							<a href="portfolio-details.html"><img class="img-fluid" src="img/projects/projects-5.jpg" alt=""></a>
-							<div class="projects_text">
-								<a href="portfolio-details.html"><h4>Cosmetic Trend Watcher</h4></a>
-								<p>Client Project</p>
+						<a href="portfolio-details.html" style="display:block; color:inherit;">
+							<div class="projects_item">
+								<a href="portfolio-details.html"><img class="img-fluid" src="img/projects/projects-5.jpg" alt=""></a>
+								<div class="projects_text">
+									<h4>Cosmetic Trend Watcher</h4>
+									<p>Client Project</p>
+								</div>
 							</div>
-						</div>
+						</a>
 					</div>
 					<div class="col-lg-4 col-sm-6 brand work web">
-						<div class="projects_item">
-							<a href="portfolio-details.html"><img class="img-fluid" src="img/projects/projects-6.jpg" alt=""></a>
-							<div class="projects_text">
-								<a href="portfolio-details.html"><h4>3D Helmet Design</h4></a>
-								<p>Client Project</p>
+						<a href="portfolio-details.html" style="display:block; color:inherit;">
+							<div class="projects_item">
+								<a href="portfolio-details.html"><img class="img-fluid" src="img/projects/projects-6.jpg" alt=""></a>
+								<div class="projects_text">
+									<h4>3D Helmet Design</h4>
+									<p>Client Project</p>
+								</div>
 							</div>
-						</div>
+						</a>
 					</div>
 				</div>
         	</div>
