--- a/index.html
+++ b/index.html
@@ -287,57 +287,47 @@
 				</div>
 				<div class="projects_inner row">
 					<div class="col-lg-4 col-sm-6 brand web">
-						<a href="portfolio-details.html" style="display:block; color:inherit;">
-							<div class="projects_item">
-								<a href="portfolio-details.html"><img class="img-fluid" src="img/projects/projects-1.jpg" alt=""></a>
-								<div class="projects_text">
-									<h4>After Show</h4>
-									<p>Client Project</p>
-								</div>
+						<a href="portfolio-details.html" class="projects_item" style="display:block; color:inherit;">
+							<img class="img-fluid" src="img/projects/projects-1.jpg" alt="">
+							<div class="projects_text">
+								<h4>After Show</h4>
+								<p>Client Project</p>
 							</div>
 						</a>
 					</div>
 					<div class="col-lg-4 col-sm-6 brand work">
-						<a href="portfolio-details.html" style="display:block; color:inherit;">
-							<div class="projects_item">
-								<a href="portfolio-details.html"><img class="img-fluid" src="img/projects/projects-2.jpg" alt=""></a>
-								<div class="projects_text">
-									<h4>Bookworm Club</h4>
-									<p>Client Project</p>
-								</div>
+						<a href="portfolio-details.html" class="projects_item" style="display:block; color:inherit;">
+							<img class="img-fluid" src="img/projects/projects-2.jpg" alt="">
+							<div class="projects_text">
+								<h4>Bookworm Club</h4>
+								<p>Client Project</p>
 							</div>
 						</a>
 					</div>
 					<div class="col-lg-4 col-sm-6 work">
-						<a href="portfolio-details.html" style="display:block; color:inherit;">
-							<div class="projects_item">
-								<a href="portfolio-details.html"><img class="img-fluid" src="img/projects/projects-3.jpg" alt=""></a>
-								<div class="projects_text">
-									<h4>Network Visualization</h4>
-									<p>Client Project</p>
-								</div>
+						<a href="portfolio-details.html" class="projects_item" style="display:block; color:inherit;">
+							<img class="img-fluid" src="img/projects/projects-3.jpg" alt="">
+							<div class="projects_text">
+								<h4>Network Visualization</h4>
+								<p>Client Project</p>
 							</div>
 						</a>
 					</div>
 					<div class="col-lg-4 col-sm-6 brand web">
-						<a href="portfolio-details.html" style="display:block; color:inherit;">
-							<div class="projects_item">
-								<a href="portfolio-details.html"><img class="img-fluid" src="img/projects/projects-4.jpg" alt=""></a>
-								<div class="projects_text">
-									<h4>Airport Park finder</h4>
-									<p>Client Project</p>
-								</div>
+						<a href="portfolio-details.html" class="projects_item" style="display:block; color:inherit;">
+							<img class="img-fluid" src="img/projects/projects-4.jpg" alt="">
+							<div class="projects_text">
+								<h4>Airport Park finder</h4>
+								<p>Client Project</p>
 							</div>
 						</a>
 					</div>
 					<div class="col-lg-4 col-sm-6 brand work">
-						<a href="portfolio-details.html" style="display:block; color:inherit;">
-							<div class="projects_item">
-								<a href="portfolio-details.html"><img class="img-fluid" src="img/projects/projects-5.jpg" alt=""></a>
-								<div class="projects_text">
-									<h4>Cosmetic Trend Watcher</h4>
-									<p>Client Project</p>
-								</div>
+						<a href="portfolio-details.html" class="projects_item" style="display:block; color:inherit;">
+							<img class="img-fluid" src="img/projects/projects-5.jpg" alt="">
+							<div class="projects_text">
+								<h4>Cosmetic Trend Watcher</h4>
+								<p>Client Project</p>
 							</div>
 						</a>
 					</div>
